--- a/package.json
+++ b/package.json
@@ -2,26 +2,41 @@
   "name": "dashboard",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@coreui/react-chartjs": "^2.1.2",
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-dev-server": "^7.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "babel-jest": "^29.4.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-puppeteer": "^7.0.1",
+    "puppeteer": "^19.7.2",
+    "vite": "^4.1.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
